tests/compile_fail/duplicate_name.stderr
error: duplicate `name` argument
 --> tests/compile_fail/duplicate_name.rs:5:32
  |
5 |     #[structly(name = "First", name = "Second")]
  |                                ^^^^
